# multithreadingcpp_uni

lb1/: makefile  row.cpp
lb1/matrix/: main.cpp  makefile  scratch.cpp
lb1/rowSum/noThreading/: main.cpp  makefile
lb1/rowSum/threading/: main.cpp  makefile
lb1/rowSum/threadingsimd/: main.cpp  makefile
lb2/: CMakeLists.txt  main.cpp
lb2/matrix/: CMakeLists.txt  main.cpp
lb2/picture/: main.cpp
lb2/picture/pics/: 64d1xe.jpg:Zone.Identifier
lb3/task1/: CMakeLists.txt  main.cpp  main.py
lb3/task2/: CMakeLists.txt  main.cpp  main.py
lb3/task2go/: main.go
lb3/task2rust/: Cargo.toml
lb4/matrix/: kernel.cu
lb4/pic/: CMakeLists.txt  kernel.cu
lb5/matrix/: CMakeLists.txt  main.cpp
lb5/pic/: CMakeLists.txt  HelloOpenCL  main.cpp
